simple_webapp/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webappservice
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 80
