simple_webapp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: "local.ecosia.org"
    http:
      paths:
      - pathType: Prefix
        path: "/tree"
        backend:
          service:
            name: webappservice
            port:
              number: 80
